--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: "CineLab"
 description: > # this means to ignore newlines until "email:"
    Laboratorium kinematografii
 
-email: kontakt@cinelab.com.pl
+#email:
 #blog logo
 logo: "/assets/images/logo.png"
 float_logo: true # true, false (default)
