--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ logo: "/assets/images/logo.png"
 float_logo: true # true, false (default)
 
 # blog cover
-cover: "/assets/images/tlo.jpg"
+cover: "/assets/images/tlo.png"
 
 name: 'Dirk Fabisch'
 author: 'Dirk Fabisch'
